--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,2 +1,9 @@
 @use './base/root';
 @use './base/reset';
+@use './base/base';
+
+@use './layout/flow';
+@use './layout/even-columns';
+
+@use './utility/background-colors';
+@use './utility/text-colors';
