Basic nav styling

--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -65,6 +65,16 @@ $border-radius: (
 );
 
 $spacings: (
-	em: (),
-	rem: (),
+	em: (
+		200: 0.75em,
+		300: 1em,
+		400: 1.5em,
+		500: 2em,
+		600: 2.5em,
+		700: 5em,
+	),
+	rem: (
+		400: 2.4rem,
+		500: 3.2rem,
+	),
 );
