--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,9 +1,16 @@
 @use './base/root';
 @use './base/reset';
 @use './base/base';
+@use './base/animations';
 
+@use './layout/container';
 @use './layout/flow';
 @use './layout/even-columns';
+@use './layout/flex-space-between';
+
+@use './components/button';
+@use './components/navigation';
+@use './components/toggle-btn';
 
 @use './utility/background-colors';
 @use './utility/text-colors';
