--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -2,6 +2,7 @@ body {
 	font-family: var(--ff-primary);
 	font-weight: var(--fw-400);
 	background-color: var(--clr-neutral-200);
+	overflow-x: hidden;
 }
 
 h1,
