--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -4,6 +4,7 @@
 	--padding-block: var(--spacing-em-300);
 	position: relative;
 	padding-block: var(--padding-block);
+	z-index: 10;
 
 	@include mixins.mq(medium) {
 		padding-block: 0;
