--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,8 +9,9 @@
 @use './layout/flex-space-between';
 
 @use './components/button';
-@use './components/navigation';
 @use './components/toggle-btn';
+@use './components/navigation';
+@use './components/primary-header';
 
 @use './utility/background-colors';
 @use './utility/text-colors';
