--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,13 +5,17 @@
 
 @use './layout/container';
 @use './layout/flow';
-@use './layout/even-columns';
-@use './layout/flex-space-between';
+@use './layout/grid';
+@use './layout/flex';
 
 @use './components/button';
 @use './components/toggle-btn';
+@use './components/card';
 @use './components/navigation';
 @use './components/primary-header';
+@use './components/section-header';
+@use './components/section-heading';
 
 @use './utility/background-colors';
 @use './utility/text-colors';
+@use './utility/padding';
