--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,7 +10,9 @@
 
 @use './components/button';
 @use './components/toggle-btn';
+@use './components/link';
 @use './components/card';
+@use './components/article';
 @use './components/navigation';
 @use './components/primary-header';
 @use './components/section-header';
