--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,12 +11,14 @@
 @use './components/button';
 @use './components/toggle-btn';
 @use './components/link';
+@use './components/social-links';
 @use './components/card';
 @use './components/article';
 @use './components/navigation';
 @use './components/primary-header';
 @use './components/section-header';
 @use './components/section-heading';
+@use './components/primary-footer';
 
 @use './utility/background-colors';
 @use './utility/text-colors';
