Header background and nav shadow

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -20,6 +20,7 @@
 @use './components/section-heading';
 @use './components/primary-footer';
 
+@use './utility/backdrop-shadow';
 @use './utility/background-colors';
 @use './utility/text-colors';
 @use './utility/padding';
