--- a/src/sass/components/_primary-header.scss
+++ b/src/sass/components/_primary-header.scss
@@ -1,12 +1,24 @@
 @use '../base/mixins';
 
 .primary-header {
+	background-image: url('../../../dist/images/bg-intro-mobile.svg');
+	background-repeat: no-repeat;
+	background-position: top 7.5% center;
+	background-size: contain;
+
+	@include mixins.mq(medium) {
+		background-image: url('../../../dist/images/bg-intro-desktop.svg');
+		background-repeat: no-repeat;
+		background-position: top -20rem left 42.5vw;
+		background-size: cover;
+	}
+
 	&__body {
 		display: flex;
 		flex-direction: column-reverse;
 		align-items: center;
-		text-align: center;
 		gap: 4rem;
+		text-align: center;
 
 		@include mixins.mq(medium) {
 			flex-direction: row;
