--- a/src/sass/components/_primary-header.scss
+++ b/src/sass/components/_primary-header.scss
@@ -1,13 +1,13 @@
 @use '../base/mixins';
 
 .primary-header {
-	background-image: url('../../../dist/images/bg-intro-mobile.svg');
+	background-image: url('../images/bg-intro-mobile.svg');
 	background-repeat: no-repeat;
 	background-position: top 7.5% center;
 	background-size: contain;
 
 	@include mixins.mq(medium) {
-		background-image: url('../../../dist/images/bg-intro-desktop.svg');
+		background-image: url('../images/bg-intro-desktop.svg');
 		background-repeat: no-repeat;
 		background-position: top -20rem left 42.5vw;
 		background-size: cover;
